<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PagamentoActivity">

    <TextView
        android:id="@+id/pagamento_tv_digite_infos_pagamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/digite_as_informacoes_pagamento"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamento_tv_valor_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_compra"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamento_tv_digite_infos_pagamento" />

    <TextView
        android:id="@+id/pagamento_tv_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/pagamento_tv_valor_compra"
        app:layout_constraintTop_toBottomOf="@id/pagamento_tv_valor_compra"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/pagamento_et_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints="cardNumber"
        android:hint="@string/numero_do_cartao"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamento_tv_preco" />

    <EditText
        android:id="@+id/pagamento_et_cvc_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvc"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/pagamento_et_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_et_numero_cartao" />


    <EditText
        android:id="@+id/pagamento_et_mes_venc_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/mm"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/pagamento_et_cvc_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_et_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_et_ano_venc_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/aa"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/pagamento_et_cvc_cartao"
        app:layout_constraintStart_toEndOf="@id/pagamento_et_mes_venc_cartao" />


    <EditText
        android:id="@+id/pagamento_et_nome_titular_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="@string/mascara_nome_titular_cartao"
        android:hint="@string/nome_no_cartao"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="@id/pagamento_et_numero_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_et_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_et_cvc_cartao" />


    <Button
        android:id="@+id/pagamento_btn_finalizar_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_redondo_laranja"
        android:text="@string/finalizar_compra"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/pagamento_et_numero_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_et_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_et_nome_titular_cartao" />

</androidx.constraintlayout.widget.ConstraintLayout>