<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ResumoCompraActivity">

    <View
        android:id="@+id/resumo_compra_v_banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resumo_compra_tv_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/parabens"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_v_banner"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_v_banner"
        app:layout_constraintTop_toTopOf="@id/resumo_compra_v_banner" />

    <TextView
        android:id="@+id/resumo_compra_tv_compra_realizada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/compra_realizada_com_sucesso"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_tv_parabens"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_tv_parabens"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_tv_parabens" />

    <TextView
        android:id="@+id/resumo_compra_tv_confira_resumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confira_o_resumo_da_compra"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_v_banner"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_v_banner"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_v_banner" />

    <ImageView
        android:id="@+id/resumo_compra_iv_cidade"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_v_banner"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_v_banner"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_tv_confira_resumo"
        tools:src="@sample/pacotes.json/pacotes/imagem"
        android:contentDescription="@string/imagem_cidade_pacote" />

    <TextView
        android:id="@+id/resumo_compra_tv_cidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_v_banner"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_iv_cidade"
        tools:text="@sample/pacotes.json/pacotes/local" />

    <TextView
        android:id="@+id/resumo_compra_tv_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_tv_cidade"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_tv_cidade"
        tools:text="08/12 - 10/12 de 2017" />

    <TextView
        android:id="@+id/resumo_compra_tv_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_tv_data"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_tv_data"
        tools:text="@sample/pacotes.json/pacotes/preco" />


</androidx.constraintlayout.widget.ConstraintLayout>